syntax = "proto3";

package smartcore.bos.health.v1;

option go_package = "github.com/smart-core-os/sc-bos/pkg/proto/healthpb";

import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";
import "smartcore/bos/health/v1/health.proto";
import "types/time/period.proto";

// HealthHistory provides access to historical records for HealthApi service resources.
service HealthHistory {
  rpc ListHealthCheckHistory(ListHealthCheckHistoryRequest) returns (ListHealthCheckHistoryResponse);
}

// HealthCheckRecord represents a historical record of a health check for a device.
message HealthCheckRecord {
  smartcore.bos.health.v1.HealthCheck health_check = 1;
  google.protobuf.Timestamp record_time = 2;
  enum RecordType {
    RECORD_TYPE_UNSPECIFIED = 0;
    // This record is the first record for the health check.
    ADDED = 1;
    // The health check was updated.
    UPDATED = 2;
    // The health check was removed.
    // The health_check field will contain the last known health_check,
    // which will likely be a duplicate of the previous record.
    REMOVED = 3;
  }
  RecordType record_type = 3;
}

message ListHealthCheckHistoryRequest {
  // The name of the device to list the history for.
  string name = 1;
  // The id of the health check to list the history for.
  // Optional, if not specified the history for all health checks on the device will be returned.
  string id = 7;
  // The period of time to list the history for.
  smartcore.types.time.Period period = 2;

  // Fields to fetch relative to the HealthCheckRecord type
  google.protobuf.FieldMask read_mask = 3;
  // The maximum number of devices to return.
  // The service may return fewer than this value.
  // If unspecified, at most 50 items will be returned.
  // The maximum value is 1000; values above 1000 will be coerced to 1000.
  int32 page_size = 4;
  // A page token, received from a previous `ListHealthCheckHistoryResponse` call.
  // Provide this to retrieve the subsequent page.
  string page_token = 5;
  // Specify the order of the returned records.
  // The default is `record_time asc` - aka oldest record first.
  // The format is `field_name [asc|desc]`, with asc being the default.
  // Only `record_time` is supported.
  string order_by = 6;
}

message ListHealthCheckHistoryResponse {
  repeated HealthCheckRecord health_check_records = 1;

  // A token, which can be sent as `page_token` to retrieve the next page.
  // If this field is omitted, there are no subsequent pages.
  string next_page_token = 2;
  // If non-zero this is the total number of records matched by the query.
  // This may be an estimate.
  int32 total_size = 3;
}
